# Annie

./: Cargo.toml  DockerFile  Dockerfile  MEMORY_SAFETY_FIX.md  README.md  SECURITY_FIX_SUMMARY.md  build.rs  pyproject.toml  test_gpu.rs
.github/: CHANGELOG.md
.github/scripts/: CHANGELOG_AUTOMATION.md  populate_changelog.py  update_changelog.py
.github/workflows/: CI.yml  benchmark.yml  codeql.yml  fuzz.yml  pypi_publish.yml  release.yml  rocm.yml  room.yml  security-audit.yml  update-changelog.yml
benches/: gpu_benchmark.rs
benchmarks/: 0106867c835a8b4afd7cab61462904930c626ebc-small.json  01139935ae021c193a735905483aa1683648b867-small.json  016b471331d4e666e7d4028c50b4ad80849904c8-small.json  01e298f35ed2691821fc8f3e13afd9ed3dbde12a-small.json  01e9636e9979c152610887fcb89ba55b2ef88201-small.json  0255c1c2211544cdc41e204a7d325f233cb8ddda-small.json  02e9b82bd59652f7457be1a0c2e6585edced57f6-small.json  033bdb587cc25d00ba87ad695c1703920ed19251-small.json  03f56c7dd5ec6716ff1071b9c4e7904df79f63f8-small.json  05bc483aa6d14b3a0866434438a5e1163c42a1c1-small.json  07514ec63bcce152303930e1e6ee27730c3c11c5-medium.json  077abf075c12368405e4211cd01bda8d9bff5da2-small.json  07c3df311e95a0b815e9f7279f84cb85d6e4575d-small.json  086a756c2e594cd823c2b98164c1bcf2287f8a29-medium.json  09644dbbce6a8f1bf6fec71462c740132d0eb7ef-small.json  09e8ca34eba9d3a06540ce17d949717cd13b0fc3-small.json  0a06d8321c9a7f31d996ce4a9683b3f8107c7c45-small.json  0a5d73ad49100c494d767f3f6eba5a5ab993aacd-medium.json  0bd74f863a0a6b0277424f172d03175d3f8ec08c-small.json  0c6fe5d2f9c0c553ce16f69796368e1aaf3e324c-small.json  0c7dba690eaf6e6f713fa2a4e3107d162850f7be-small.json  0ca7b277423f75585f120a8385b7082f9619a2e7-small.json  0dbc113cfddfbcdfdf68178b0f09ec3751b48f30-small.json  0e4345eb437eb398848ca60b3c2f1d3f7457a992-medium.json  0f5bdbfa52d258785bdb27e3752ef53ac2807421-medium.json  0f6277b98cc34dc1c5f0005b49add3c3c869c755-small.json  12439ddfa265bf94d1490f43ce55bafb497a21a2-small.json  1284914dde5a98d6d0da6f41ae81efb910996280-small.json  12a7bd8346a35fabeda7ab93aba01920f66f707b-small.json  130f38536ceccb6997e86eb9d6a67b097bd663fc-small.json  13478bf5d11d3145728c407b61218182781aee97-small.json  153058baa8d2530fb1fe6f785abd9bffb2de14df-small.json  157f0dd9db11839742703db6ab044d74fef35c86-small.json  16334fc24fae6a693ad4f23fad1911c103cc473a-small.json  173f9261e2b2e677d5e01c1f6007608f4762cd60-small.json  19b3da92f632be1cfcbd3a333d89e9bf4d207552-medium.json  1a2394d3dcc72e954fa1eb3dcec1f71445cad327-small.json  1af79e6cc88717043f0c16cd94cce10676df3dae-small.json  1d0bfc117e81134ba86501d006fb33c7c4622209-small.json  1d1db24298bafc7cf34ab6544ef38f52298d15c6-medium.json  (+316 more)
docs/: GPU_PERFORMANCE.md  concurrency.md  examples.md  filtering.md  gpu-memory-management.md  gpu-performance.md  index.html  index.md  monitoring.md  security-audit.md
docs/api/: ann_index.md  hnsw_index.md  threadsafe_index.md
examples/: memory_safety_demo.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: distances.rs  fuzz_target_1.rs  input_validation.rs
rust_annie_macros/foo/: Cargo.toml
rust_annie_macros/foo/src/: lib.rs
scripts/: batch_ben.py  benchmark.py  check_regression.py  compare_results.py  custom_metrics_demo.py  dashboard.py  demo_monitoring.py  filter_example.py
src/: backend.rs  build.rs  concurrency.rs  distance_registry.rs  errors.rs  filters.rs  hnsw_index.rs  index.rs  index_enum.rs  lib.rs  macros.rs  metrics.rs  monitoring.rs  path_validation.rs  py_index.rs  storage.rs  test.py  utils.rs
src/backends/: ann_backend.rs  brute.rs  gpu.rs  hnsw.rs  mod.rs
src/benches/: gpu_benchmark.rs
src/gpu/: cuda.rs  device.rs  memory.rs  mod.rs  monitoring.rs  rocm.rs
src/kernels/: l2_kernel_fp16.ptx  l2_kernel_int8.ptx
tests/: concurrency_stress.rs  gpu_error_conditions.rs  gpu_memory_management.rs  gpu_test.rs  memory_safety_tests.rs  path_traversal_tests.rs  security_tests.rs  standalone_memory_safety.rs  test_ann_index.py  test_bindings.py  test_custom_metrics.py  test_distance_enum.py  test_filters.py  test_hnsw.py  test_index.rs  test_memory_safety.rs  test_monitoring.py  test_path_traversal.rs  test_pluggable_metrics.py  test_py_index.py  test_security.rs  test_threadsafeindex.rs
