[package]
name = "rust_annie"
version = "0.2.3"
edition = "2021"
build = "build.rs"

[lib]
name = "rust_annie"
crate-type = ["cdylib", "rlib"]

[dependencies]

rust_annie_macros = { path = "rust_annie_macros/foo" }
pyo3 = { version = "0.25.0", features = ["extension-module"] }
hnsw_rs = "0.3.2"
numpy = "0.25.0"
ndarray = "0.16.1"
serde = { version = "1.0.188", features = ["derive"] }
bincode = "1.3.3"
rayon = "1.11.0"
lazy_static = { version = "1.4.0", optional = true }
bit-vec = { version = "0.8.0", features = ["serde"] }
rand = "0.9.0"
criterion = { version = "0.7.0", optional = true }

# GPU backends
cust = { version = "0.3.0", optional = true }
hip-rs = { version = "1.0.0", optional = true }
thiserror = "1.0"

[features]
cuda = ["cust", "lazy_static"]
rocm = ["hip-rs", "lazy_static"]

[workspace]
members = [".", "fuzz", "rust_annie_macros/foo"]

[dev-dependencies]
criterion = "0.7"
rand = "0.9"

[[bench]]
name = "gpu_benchmark"
harness = false
