[package]
name = "rust_annie"
version = "0.2.5"
edition = "2021"
build = "build.rs"

[lib]
name = "rust_annie"
crate-type = ["cdylib", "rlib"]

[dependencies]

rust_annie_macros = { path = "rust_annie_macros/foo" }
pyo3 = { version = "0.25.0" }
hnsw_rs = "0.3.3"
numpy = "0.25.0"
ndarray = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
rayon = "1.11.0"
lazy_static = { version = "1.4.0", optional = true }
bit-vec = { version = "0.8.0", features = ["serde"] }
rand = "0.9.0"
criterion = { version = "0.8.1", optional = true }

# GPU backends
cust = { version = "0.3.0", optional = true }
hip-rs = { version = "1.0.0", optional = true }
bytemuck = { version = "1.24", features = ["derive"] }
half = { version = "2.7", features = ["bytemuck"] }
thiserror = "2.0"

[features]
cuda = ["cust", "lazy_static"]
rocm = ["hip-rs", "lazy_static"]

# Forwarding features to control PyO3 from this crate
# Use these in CI/maturin instead of trying to enable dependency features directly.
python-ext = ["pyo3/extension-module"]
python-abi3 = ["pyo3/abi3-py38"]
# On Windows, generate an import library for python3.dll when needed
pyo3-import-lib = ["pyo3/generate-import-lib"]

[workspace]
members = [".", "fuzz", "rust_annie_macros/foo"]

[dev-dependencies]
criterion = "0.8"
rand = "0.9"

[[bench]]
name = "gpu_benchmark"
harness = false
