[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rust_annie"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
# Build as an extension module using the stable Python limited API (abi3),
# so wheels don’t link against a specific libpython (required for musllinux).
features = ["python-ext", "python-abi3", "pyo3-import-lib"]
